--- a/app/views/record.html
+++ b/app/views/record.html
@@ -1,6 +1,17 @@
-<h2>Record a mood</h2>
+<h2 ng-if="!loggedIn" class="jumbotron">You can save moods on your computer, but you'll need to <a href="#/">login or register</a> to backup and sync your data with the app.</h2>
 
-<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+<div class="alerts">
+	<div class="alert-container">
+		<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+	</div>
+</div>
+
+<ng-toast></ng-toast>
+<toast></toast>
+
+<mc-messages></mc-messages>
+
+ <div growl></div>
 
 <button class="btn mood-button mood-10" ng-click="saveMood(10)">Amazing</button>
 <button class="btn mood-button mood-9" ng-click="saveMood(9)">Great</button>
