--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,14 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+
+  background-image: url(/images/upfeathers.png);
+}
+
+.container {
+  background: #fff;
+  border-radius: 50px;
+  padding: 30px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -37,8 +45,13 @@ body {
   }
 }
 
+.title {
+  color: #705D34;
+}
+
 /* Custom page footer */
 .footer {
+  margin-top: 15px;
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
@@ -83,7 +96,7 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
