--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,10 +1,31 @@
-<h2 ng-if="!loggedIn" class="jumbotron"><a href="#/">Login or register</a> to change these settings</h2>
 
-<h2>Settings</h2>
-<h4>Current email reminders</h4>
-<h4>Add email reminders</h4>
-<h4>Change your password</h4>
-<h4>Delete account forever</h4>
 
-<h2>Authorised apps</h2>
-<h4>You've allowed these apps to access your mood data at any time</h4>
+<h2 ng-if="!loggedIn" class="jumbotron"><a href="#/">Login or register</a> to use the API</h2>
+
+<div ng-if="loggedIn" class="col-md-3 pull-right text-right">
+	<button class="btn btn-danger" ng-click="doLogout()">Logout {{userEmail}}</button>
+</div>
+
+<section ng-if="loggedIn">
+	<h2>API</h2>
+	<h3>Your auth token</h3>
+	<input class="form-control" type="text" value="{{authToken}}" size="35" />
+
+	<h3>Endpoints</h3>
+	<pre>
+		<table>
+			<tr>
+				<td>PUT</td>
+				<td>http://moodtrackerapp.firebase.io/moodlogNumbers/{{userId}}.json</td>
+			</tr>
+			<tr>
+				<td>GET</td>
+				<td>http://moodtrackerapp.firebase.io/moodlogNumbers/{{userId}}.json</td>
+			</tr>
+			<tr>
+				<td>DELETE</td>
+				<td>http://moodtrackerapp.firebase.io/moodlogNumbers/{{userId}}.json</td>
+			</tr>			
+		</table>
+	</pre>
+</section>
