prepared for deploy

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -28,7 +28,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <div class="alert alert-warning" ng-if="!mood.data">You haven't saved any moods yet, why not <a href="#/record">record</a> what you're feeling now?</div>
+    <div class="alert alert-warning" ng-if="!mood.data">You haven't saved any moods yet, try <a href="#/record">recording</a> what you're feeling now.</div>
     <table class="table">
       <tr>
         <td class="text-center"><strong>Mood level</strong></td>
