--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,6 @@
+$fa-font-path: "../bower_components/fontawesome/fonts/";
+@import "fontawesome/scss/font-awesome.scss";
+
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
