--- a/app/views/record.html
+++ b/app/views/record.html
@@ -1,4 +1,4 @@
-<h2 ng-if="!loggedIn" class="jumbotron">You can save moods on your computer, but you'll need to <a href="#/">login or register</a> to backup and sync your data with the app.</h2>
+<h2 ng-if="!loggedIn" class="jumbotron">You can save moods on your computer, but you'll need to <a href="/#/#login">login or register</a> to backup and sync your data with the app.</h2>
 
 <div class="alerts">
 	<div class="alert-container">
