--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,11 +1,5 @@
 
-<h2 ng-if="!loggedIn" class="jumbotron"><a href="#/">Login or register</a> to use the API</h2>
-
-<div class="row">
-	<div ng-if="loggedIn" class="col-md-6 pull-right text-right">
-		<button class="btn btn-danger" ng-click="doLogout()">Logout {{userEmail}}</button>
-	</div>
-</div>
+<h2 ng-if="!loggedIn" class="jumbotron"><a href="/#/#login">Login or register</a> to use the API</h2>
 
 <div class="col-md-6"></div>
 
