--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,11 +6,29 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+li a {
+  cursor: pointer;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+
+.remove-button {
+  cursor: pointer;
+  color: #8D8D8D;
+  &:hover {
+    color: #000;
+  }
+}
+
+.jumbotron.main {
+  background: url(/images/bg.jpg);
+  background-size: 100%;
+  color: #fff;
 }
 
 /* Space out content a bit */
