--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,3 +1,12 @@
-<h2 ng-if="!loggedIn" class="jumbotron">Want to backup your data? <a href="#/">Login or register</a>.</h2>
+<h2 ng-if="!loggedIn" class="jumbotron">Want to backup your data? <a href="/#/#login">Login or register</a>.</h2>
 
-<cjs-line class="bar-chart" responsive="true" dataset="mood.data" options="chartOptions"></cjs-line>
+
+<div class="alert alert-warning" ng-if="!mood.data.length">You haven't saved any moods yet. Save a few and then come back here to see your data visualised.</div>
+
+<div ng-if="mood.data.length">
+	<h2>Moods over past week</h2>
+	<p>Want more charts? <a href="mailto:tomchambers@gmail.com">Email me</a> and I'll add them.</p>
+	<div>	
+		<linechart data="mood.data" options="options" mode="" width="" height=""></linechart>
+	</div>
+</div>
