--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,11 @@ li a {
   cursor: pointer;
 }
 
+.logo {
+  position: relative;
+  left: -15px;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
