--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,7 @@
 <h2 ng-if="!loggedIn" class="jumbotron">Want to backup your data? <a href="/#/#login">Login or register</a>.</h2>
 
 
-<div class="alert alert-warning" ng-if="!mood.data.length">You haven't saved any moods yet. Save a few and then come back here to see your data visualised.</div>
+<div class="alert alert-warning" ng-if="!mood.data.length">You haven't saved any moods yet. <a href="#/record">Save a few</a> and then come back here to see your data visualised.</div>
 
 <div ng-if="mood.data.length">
 	<h2>Moods over past week</h2>
