--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,24 +9,27 @@
   </div>
 
   <div class="row marketing">
-          <form class="form-signin">
+        <form class="form-signin">
           <a id="login" />
           <h2>Register or login</h2>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" id="inputEmail" class="form-control" placeholder="Email address" ng-model="loginForm.email" required>
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" id="inputPassword" class="form-control" placeholder="Password" ng-model="loginForm.password" required>
-<!--           <div class="checkbox">
-            <label>
-              <input type="checkbox" value="remember-me"> Remember me
-            </label>
-          </div> -->
           <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="doLogin()">Sign in</button>
           <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="doRegister()">Register</button>
         </form>
+
+        <form class="form-signin">
+        <h3>Reset password</h3>
+        <label for="resetEmail" class="sr-only">Email address</label>
+        <input type="email" id="resetEmail" class="form-control" placeholder="Email address" ng-model="resetForm.email" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="doPasswordReset()">Reset password</button>
+      </form>
   </div>
 </div>
 
+<h2>Your mood history</h2>
 <div class="row">
   <div class="col-md-12">
     <table class="table">
@@ -44,10 +47,10 @@
         <td>
           <span ng-if="entry.offline"><i class="fa fa-exclamation-triangle"></i>
         </td>
-        <td ng-click="deleteRecord(entry.id)"><span ng-if="!entry.synced"><i class="fa fa-times remove-button"></span></td>
+        <td ng-click="deleteRecord(entry.id, entry.offline)"><span ng-if="!entry.synced && entry.id"><i class="fa fa-times remove-button"></span></td>
       </tr>
     </table>
     <div class="alert alert-warning" ng-if="!mood.data">You haven't saved any moods yet, try <a href="#/record">recording</a> what you're feeling now.</div>
-    <small><i class="fa fa-exclamation-triangle"></i> - indicates moods saved offline or anoymously</small>
+    <small><i class="fa fa-exclamation-triangle"></i> - indicates moods saved offline or anonymously</small>
   </div>
 </div>
