--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -5,6 +5,27 @@
 
 <div class="row">
 	<div class="col-md-12" ng-if="loggedIn">	
+		Signed in as {{email}}
+
+		<h2>Account settings</h2>
+		<h3>Change email</h3>
+        <form>
+          <label for="inputEmail" class="sr-only">New email address</label>
+          <input type="email" id="newEmail" class="form-control" placeholder="Email address" ng-model="emailForm.email" required>
+          <label for="inputPassword" class="sr-only">Confirm password</label>
+          <input type="password" id="confirmPassword" class="form-control" placeholder="Password" ng-model="emailForm.password" required>
+          <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="doChangeEmail()">Change email</button>
+        </form>		
+
+		<h3>Change password</h3>
+        <form>
+          <label for="oldPassword" class="sr-only">Old password</label>
+          <input type="password" id="inputOldPassword" class="form-control" placeholder="Old password" ng-model="changeForm.oldPassword" required>
+          <label for="newPassword" class="sr-only">Password</label>
+          <input type="password" id="inputNewPassword" class="form-control" placeholder="New password" ng-model="changeForm.newPassword" required>
+          <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="doChangePassword()">Change password</button>
+        </form>		
+
 		<h2>API</h2>
 		<h3>Your auth token</h3>
 		<input class="form-control" type="text" value="{{authToken}}" size="35" />
