--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
 
   <div class="row marketing">
         <form class="form-signin">
-          <a id="login" />
+          <a id="login"></a>
           <h2>Register or login</h2>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" id="inputEmail" class="form-control" placeholder="Email address" ng-model="loginForm.email" required>
