--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,6 +7,16 @@
       Harmony is a simple web and iPhone app for mood tracking
     </p>
   </div>
+  <a href="https://itunes.apple.com/us/app/harmony-mood-tracking/id959960886?mt=8"">
+    <div class="cf panel panel-default text-center">
+      <div class="app-store-title"><h3 class="app-store-title">Harmony Mood Tracker is on the app store</h3></div>
+      <img src="/images/appstore.svg" alt="Harmony Mood Tracker iOS" height="40" width="135" class="app-store-title">
+  </div></a>
+  <div class="panel panel-default">
+    <h3>Why track my mood?</h3>
+    <p>Mood tracking helps you understand the flows and factors that make up your mood. It can be useful for problems such as depression and bipolar disorder, where you may not be aware of how your mental state has changed over time.</p>
+    <p>By collecting data for a long period of time, you can see how events in your life have influenced your happiness. Ultimately, the usefulness of tracking depends on what you learn about these influences and how you choose to change your life.</p>
+  </div>
 
   <div class="row marketing">
         <form class="form-signin">
